--- a/RaalProjectPreview/bin/RaalProjectPreview.dll.config
+++ b/RaalProjectPreview/bin/RaalProjectPreview.dll.config
@@ -18,6 +18,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <authentication mode="Forms">
+      <forms name="cookies" timeout="2880" loginUrl="~/Home/Login" />
+    </authentication>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
