--- a/RaalProjectPreview/RaalProjectPreview.csproj
+++ b/RaalProjectPreview/RaalProjectPreview.csproj
@@ -127,6 +127,26 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="BLL\Models\Admin\AllUserData.cs" />
+    <Compile Include="BLL\Models\Admin\Request\AddNewItemRequestModel.cs" />
+    <Compile Include="BLL\Models\Admin\Request\AddNewUserRequestModel.cs" />
+    <Compile Include="BLL\Models\Admin\Request\DeleteItemFromShopRequestModel.cs" />
+    <Compile Include="BLL\Models\Admin\Request\DeleteUserRequestModel.cs" />
+    <Compile Include="BLL\Models\Admin\Request\EditItemInShopRequestModel.cs" />
+    <Compile Include="BLL\Models\Admin\Request\EditUserRequestModel.cs" />
+    <Compile Include="BLL\Models\Admin\Request\SetCompletedStatusRequestModel.cs" />
+    <Compile Include="BLL\Models\Admin\Request\SetInProcessingStatusRequestModel.cs" />
+    <Compile Include="BLL\Models\Admin\Response\AddNewItemResponseModel.cs" />
+    <Compile Include="BLL\Models\Admin\Response\AddNewUserResponseModel.cs" />
+    <Compile Include="BLL\Models\Admin\Response\DeleteItemFromShopResponseModel.cs" />
+    <Compile Include="BLL\Models\Admin\Response\DeleteUserResponseModel.cs" />
+    <Compile Include="BLL\Models\Admin\Response\EditItemInShopResponseModel.cs" />
+    <Compile Include="BLL\Models\Admin\Response\EditUserResponseModel.cs" />
+    <Compile Include="BLL\Models\Admin\Response\SetCompletedStatusResponseModel.cs" />
+    <Compile Include="BLL\Models\Admin\Response\SetInProcessingResponseModel.cs" />
+    <Compile Include="BLL\Models\Admin\Response\ShowItemsResponseModel.cs" />
+    <Compile Include="BLL\Models\Admin\Response\ShowOrdersResponseModel.cs" />
+    <Compile Include="BLL\Models\Admin\Response\ShowUserListResponseModel.cs" />
     <Compile Include="BLL\Models\Enums\ResponseStatus.cs" />
     <Compile Include="BLL\Models\Enums\ServiceResponseStatus.cs" />
     <Compile Include="BLL\Models\Home\Request\AuthRequestModel.cs" />
@@ -135,6 +155,7 @@
     <Compile Include="BLL\Models\Home\Response\BaseResponse.cs" />
     <Compile Include="BLL\Models\Home\Response\LoginResponseModel.cs" />
     <Compile Include="BLL\Models\Home\ServiceModels\Response\ServiceLoginResponse.cs" />
+    <Compile Include="BLL\Services\AdminService.cs" />
     <Compile Include="BLL\Services\UserAuthService.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
