--- a/RaalProjectPreview/RaalProjectPreview.csproj
+++ b/RaalProjectPreview/RaalProjectPreview.csproj
@@ -220,7 +220,9 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\Vue\AdminPanelModalVue.js" />
     <Content Include="Scripts\Vue\AdminPanelVue.js" />
+    <Content Include="Scripts\Vue\CustomerPanelModalVue.js" />
     <Content Include="Scripts\Vue\CustomerPanelVue.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
